--- a/code2/styles.css
+++ b/code2/styles.css
@@ -1,16 +1,13 @@
 .menu {
     background-color: black;
-    overflow: hidden;
-}
-
-.menu li {
-    float: left;
+    list-style: none;
+    display: flex;
 }
 
 .menu li a {
     display: block;
     color: white;
-    padding: 14px 20px;
+    padding: 20px;
     
 }
 
